--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum harum perspiciatis blanditiis provident, quam maxime. Est cumque, accusamus eveniet quis adipisci laboriosam qui dolorum similique.</p>
 </body>
 </html>
